2014-11-20  Niibe Yutaka  <gniibe@fsij.org>

	* src/openpgp-do.c (extended_capabilities): Key attributes can be
	modifid now.

2014-11-20  Niibe Yutaka  <gniibe@fsij.org>

	* src/gnuk.h (NR_NONE, NR_DO__FIRST__): Remove.
	(NR_DO_*): Redefine.
	(NR_KEY_ALGO_ATTR_SIG, NR_KEY_ALGO_ATTR_DEC)
	(NR_KEY_ALGO_ATTR_AUT): New.

	* src/openpgp-do.c (gpg_do_load_prvkey, gpg_do_delete_prvkey)
	(gpg_do_write_prvkey, gpg_do_chks_prvkey, gpg_data_scan)
	(gpg_data_copy, gpg_do_read_simple)
	(gpg_do_write_simple): Don't use NR_DO__FIRST__.
	(gpg_do_put_data): Don't use NR_NONE any more.
	(do_tag_to_nr): Use -1 to specify NONE.

	* src/flash.c (flash_enum_clear, flash_enum_write_internal)
	(flash_enum_write): New.

2014-11-19  Niibe Yutaka  <gniibe@fsij.org>

	* src/gnuk.h (FIRMWARE_UPDATE_KEY_CONTENT_LEN): New.
	(size_of_key): New enum.

	* src/openpgp.c (gpg_get_firmware_update_key)
	(cmd_read_binary, cmd_external_authenticate): Use
	FIRMWARE_UPDATE_KEY_CONTENT_LEN.

	* src/flash.c (KEY_SIZE): Remove.
	(key_available_at): Add new arg as KEY_SIZE.
	(flash_check_all_other_keys_released): Likewise.
	(flash_key_fill_zero_as_released, flash_key_release): Likewise.

	(flash_init): Move initializing keys into another function.
	(flash_init_keys): New function.

	(flash_key_alloc): Use gpg_get_algo_attr_key_size.
	(flash_key_write): Add new arg as KEY_DATA_LEN.

	(flash_write_binary): Use FIRMWARE_UPDATE_KEY_CONTENT_LEN.

2014-09-16  Niibe Yutaka  <gniibe@fsij.org>

	* src/gnuk.h (MAX_PRVKEY_LEN): New.
	(KEY_CONTENT_LEN): Remove.

	* src/call-rsa.c (RSA_SIGNATURE_LENGTH): Remove.
	(rsa_sign, rsa_verify, rsa_genkey): Add new arg: PUBKEY_LEN.
	(rsa_decrypt): Don't use KEY_CONTENT_LEN.

2014-06-19  Niibe Yutaka  <gniibe@fsij.org>

	* src/ecc-mont.c (compute_nQ): Add comment.

	* src/mod.c (mod_inv): Fix comment. X^-1 = 0 when X=0
	is important for Montgomery curve computation.

2014-06-05  Niibe Yutaka  <gniibe@fsij.org>

	* tool/add_openpgp_authkey_from_gpgssh.py: New.
